Fix userbar appearing behind the announcement bar.

--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -112,6 +112,7 @@ html:lang(bb) #header {
   vertical-align: middle !important;
   padding: 3px 25px 2px 5px !important;
   margin-right: 0;
+  z-index: 1;
 }
 
 .pinHeader-subanduser #header-bottom-right {
